--- a/package.json
+++ b/package.json
@@ -10,9 +10,20 @@
     "lint": "eslint ."
   },
   "dependencies": {
+    "@react-native-masked-view/masked-view": "^0.2.8",
+    "@react-navigation/material-top-tabs": "^6.5.2",
+    "@react-navigation/native": "^6.1.2",
+    "@react-navigation/stack": "^6.3.11",
+    "install": "^0.13.0",
+    "npm": "^9.3.0",
     "react": "18.1.0",
     "react-native": "0.70.6",
-    "react-native-push-notification": "^8.1.1"
+    "react-native-gesture-handler": "^2.9.0",
+    "react-native-pager-view": "^6.1.2",
+    "react-native-push-notification": "^8.1.1",
+    "react-native-reanimated": "^2.14.1",
+    "react-native-safe-area-context": "^4.4.1",
+    "react-native-screens": "^3.18.2"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
