--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@react-native-masked-view/masked-view": "^0.2.8",
     "@react-navigation/material-top-tabs": "^6.5.2",
     "@react-navigation/native": "^6.1.2",
+    "@react-navigation/native-stack": "^6.9.8",
     "@react-navigation/stack": "^6.3.11",
     "install": "^0.13.0",
     "npm": "^9.3.0",
