--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-push-notification": "^8.1.1",
     "react-native-reanimated": "^2.14.1",
     "react-native-safe-area-context": "^4.4.1",
-    "react-native-screens": "^3.18.2"
+    "react-native-screens": "^3.18.2",
+    "react-native-vector-icons": "^9.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.12.9",
